{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 217,
  "lineage": "a1232beb-d0d6-844c-39bf-c849ddab669b",
  "resources": [
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:loadbalancer/app/push-web-alb/5b142295735c98f0",
            "arn_suffix": "app/push-web-alb/5b142295735c98f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "push-web-alb-108280349.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:loadbalancer/app/push-web-alb/5b142295735c98f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "push-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ddbf084280ba0f1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ed9db6ac76c8f86"
              },
              {
                "subnet_id": "subnet-0704d18202967fef8"
              }
            ],
            "subnets": [
              "subnet-06ed9db6ac76c8f86",
              "subnet-0704d18202967fef8"
            ],
            "vpc_id": "vpc-0368a0462d769bd4b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.push-web-ecs-service-sg.aws_security_group.security_group",
            "module.push-web-sg.aws_security_group.security_group",
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.private_app_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_app_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_app_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_app_subnet_az2_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az2_association",
            "module.vpc.aws_route_table_association.public_subnet_az1_route_table_association",
            "module.vpc.aws_route_table_association.public_subnet_az2_route_table_association",
            "module.vpc.aws_security_group.vpc_sg",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:listener/app/push-web-alb/5b142295735c98f0/517ebf608478e74a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:targetgroup/push-web-alb/0f1355570c22ec21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:listener/app/push-web-alb/5b142295735c98f0/517ebf608478e74a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:loadbalancer/app/push-web-alb/5b142295735c98f0",
            "port": 443,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-alb.module.alb.aws_lb.alb-example",
            "module.ecs-alb.module.alb.aws_lb_target_group.alb-example",
            "module.push-web-ecs-service-sg.aws_security_group.security_group",
            "module.push-web-sg.aws_security_group.security_group",
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.private_app_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_app_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_app_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_app_subnet_az2_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az2_association",
            "module.vpc.aws_route_table_association.public_subnet_az1_route_table_association",
            "module.vpc.aws_route_table_association.public_subnet_az2_route_table_association",
            "module.vpc.aws_security_group.vpc_sg",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:targetgroup/push-web-alb/0f1355570c22ec21",
            "arn_suffix": "targetgroup/push-web-alb/0f1355570c22ec21",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:996478355195:targetgroup/push-web-alb/0f1355570c22ec21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "push-web-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.push-web-ecs-service-sg.aws_security_group.security_group",
            "module.push-web-sg.aws_security_group.security_group",
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.private_app_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_app_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_app_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_app_subnet_az2_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az2_association",
            "module.vpc.aws_route_table_association.public_subnet_az1_route_table_association",
            "module.vpc.aws_route_table_association.public_subnet_az2_route_table_association",
            "module.vpc.aws_security_group.vpc_sg",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.push-web-ecs-service-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:security-group/sg-0ddbf084280ba0f1b",
            "description": "push-web-ecs-service-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddbf084280ba0f1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "push-web-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "996478355195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "Name": "push-web-ecs-service-sg",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "prod",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "Name": "push-web-ecs-service-sg",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "prod",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.private_app_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_app_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_app_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_app_subnet_az2_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az2_association",
            "module.vpc.aws_route_table_association.public_subnet_az1_route_table_association",
            "module.vpc.aws_route_table_association.public_subnet_az2_route_table_association",
            "module.vpc.aws_security_group.vpc_sg",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.push-web-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:security-group/sg-068de6d6a1fe37ba3",
            "description": "push-web-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068de6d6a1fe37ba3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "push-web-sg",
            "name_prefix": "",
            "owner_id": "996478355195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backup": "False",
              "Name": "push-web-sg",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "prod",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "tags_all": {
              "Backup": "False",
              "Name": "push-web-sg",
              "OwnerTeamEmail": "mardelacruz@abs-cbn.com",
              "abscbn-bus-unit": "DCT",
              "abscbn-cost-centre": "61250",
              "abscbn-criticality": "Silver",
              "abscbn-env": "prod",
              "abscbn-product": "ent",
              "abscbn-url": "pushweb.abs-cbn.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.private_app_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_app_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az1_nat_gateway_route",
            "module.vpc.aws_route.private_data_subnet_az2_nat_gateway_route",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.private_app_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_app_subnet_az2_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az1_association",
            "module.vpc.aws_route_table_association.private_data_subnet_az2_association",
            "module.vpc.aws_route_table_association.public_subnet_az1_route_table_association",
            "module.vpc.aws_route_table_association.public_subnet_az2_route_table_association",
            "module.vpc.aws_security_group.vpc_sg",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078ce636821c64219",
            "association_id": "eipassoc-02ba030f84cf68b51",
            "domain": "vpc",
            "id": "eipalloc-078ce636821c64219",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a0e6b579bc938f17",
            "private_dns": "ip-10-195-82-174.ap-southeast-1.compute.internal",
            "private_ip": "10.195.82.174",
            "public_dns": "ec2-52-220-236-98.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.236.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:internet-gateway/igw-02f089ba20333142f",
            "id": "igw-02f089ba20333142f",
            "owner_id": "996478355195",
            "tags": {
              "Name": "consumption-igw"
            },
            "tags_all": {
              "Name": "consumption-igw"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078ce636821c64219",
            "association_id": "eipassoc-02ba030f84cf68b51",
            "connectivity_type": "public",
            "id": "nat-0914f7bf0a992de73",
            "network_interface_id": "eni-0a0e6b579bc938f17",
            "private_ip": "10.195.82.174",
            "public_ip": "52.220.236.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a161a5ed26f2c73",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az1_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018817b463abb59c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0914f7bf0a992de73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018817b463abb59c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az2_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fa30977107c98431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0914f7bf0a992de73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fa30977107c9843",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az1_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4167fa4f857291c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0914f7bf0a992de73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4167fa4f857291c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az2_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b0076f1183e53ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0914f7bf0a992de73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b0076f1183e53ed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:route-table/rtb-018817b463abb59c4",
            "id": "rtb-018817b463abb59c4",
            "owner_id": "996478355195",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914f7bf0a992de73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-private1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-rtb-private1-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:route-table/rtb-00fa30977107c9843",
            "id": "rtb-00fa30977107c9843",
            "owner_id": "996478355195",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914f7bf0a992de73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-private2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-rtb-private2-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:route-table/rtb-0f4167fa4f857291c",
            "id": "rtb-0f4167fa4f857291c",
            "owner_id": "996478355195",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914f7bf0a992de73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-private3-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-rtb-private3-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:route-table/rtb-05b0076f1183e53ed",
            "id": "rtb-05b0076f1183e53ed",
            "owner_id": "996478355195",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914f7bf0a992de73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-private4-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-rtb-private4-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:route-table/rtb-039b371559ae411d5",
            "id": "rtb-039b371559ae411d5",
            "owner_id": "996478355195",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f089ba20333142f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "consumption-rtb-public"
            },
            "tags_all": {
              "Name": "consumption-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1bb7a82401481c",
            "route_table_id": "rtb-018817b463abb59c4",
            "subnet_id": "subnet-01a161a5ed26f2c73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c29efc2a97e49d",
            "route_table_id": "rtb-00fa30977107c9843",
            "subnet_id": "subnet-012e0506bf42777b1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0afd4bc2cef4b5",
            "route_table_id": "rtb-0f4167fa4f857291c",
            "subnet_id": "subnet-0f40426ddc75a2b0c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0971105ce23524cdf",
            "route_table_id": "rtb-05b0076f1183e53ed",
            "subnet_id": "subnet-07130b595c503795a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fcd4b9b1efd4bbd",
            "route_table_id": "rtb-039b371559ae411d5",
            "subnet_id": "subnet-0704d18202967fef8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e4f3e9670631bba",
            "route_table_id": "rtb-039b371559ae411d5",
            "subnet_id": "subnet-06ed9db6ac76c8f86"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:security-group/sg-08b31f46371c4e795",
            "description": "vpc security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b31f46371c4e795",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.195.80.0/21"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "vpc-security-group",
            "name_prefix": "",
            "owner_id": "996478355195",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-01a161a5ed26f2c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.82.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a161a5ed26f2c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-private1-ap-southeast-1a"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-012e0506bf42777b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.83.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012e0506bf42777b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-private2-ap-southeast-1b"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-0f40426ddc75a2b0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.84.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f40426ddc75a2b0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private3-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-private3-ap-southeast-1a"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-07130b595c503795a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.85.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07130b595c503795a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-private4-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-private4-ap-southeast-1b"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-0704d18202967fef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.195.80.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704d18202967fef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-public1-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "consumption-subnet-public1-ap-southeast-1a"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:subnet/subnet-06ed9db6ac76c8f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.195.81.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed9db6ac76c8f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "996478355195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "consumption-subnet-public2-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "consumption-subnet-public2-ap-southeast-1b"
            },
            "vpc_id": "vpc-0368a0462d769bd4b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996478355195:vpc/vpc-0368a0462d769bd4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.195.80.0/21",
            "default_network_acl_id": "acl-0560ad644690ee1ea",
            "default_route_table_id": "rtb-0265a95371ffb25fb",
            "default_security_group_id": "sg-0e6b47b45c38fb31b",
            "dhcp_options_id": "dopt-084d01651580e082a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0368a0462d769bd4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0265a95371ffb25fb",
            "owner_id": "996478355195",
            "tags": {
              "Name": "consumption"
            },
            "tags_all": {
              "Name": "consumption"
            }
          }
        }
      ]
    }
  ]
}